--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script defer src="js/script_login.js"></script>
+    <title>Page d'Accueil</title>
+</head>
+<body class="bg-success p-2" style="background-image: url('https://media.istockphoto.com/id/582296960/fr/vectoriel/restaurant-dart-au-trait-mince-et-ic%C3%B4nes-de-lindustrie-alimentaire-motif-sans-couture.jpg?s=612x612&w=0&k=20&c=Udwj4MXDvKfjYpGxvbMorOx07UlDgAK6_yikyioe2oA=');">
+    <div class=" bg-image py-1" style="background-image: url('https://media.istockphoto.com/id/582296960/fr/vectoriel/restaurant-dart-au-trait-mince-et-ic%C3%B4nes-de-lindustrie-alimentaire-motif-sans-couture.jpg?s=612x612&w=0&k=20&c=Udwj4MXDvKfjYpGxvbMorOx07UlDgAK6_yikyioe2oA=');"></div>
+    
+    <nav class="navbar navbar-expand-sm bg-body-tertiary rounded" style="--bs-bg-opacity: .8;">
+        <div class="container-fluid justify-content-center">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                <img src="images/logo.png" alt="logo" style="height: 50px; width: 90px;">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item fw-bold">
+                        <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a class="nav-link" href="#">Recettes</a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a class="nav-link" href="#">Favoris</a>
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a class="nav-link" href="#">Liste de course</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <h1 class="text-center mt-5" style="font-family: 'Bungee Spice', cursive; font-size: 50px;">Le plate en forme</h1>
+    <h3 class="text-center mb-5" style="font-family: 'Bungee Spice', cursive;">Des recettes et des actus culinaires</h3>
+    <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary" style="opacity: 0.6; width: 70%; height: 50%;">
+    <footer class="text-black py-4 mt-4 bg-body-tertiary rounded" style="--bs-bg-opacity: .8;">
+        <div class="container">
+            <div class="row text-center align-items-center">
+                <img src="images/logo.png" alt="logo" class="col-md-3" style="height: 160px; width: 280px;">
+                <div class="col-md-3">
+                    <h5>Le Plat en forme</h5>
+                    <p>Le Plat en forme est un site de recettes de cuisine en ligne gratuit. Cherchez des idées de recette selon les évènements de l'année</p>
+                </div>
+                <div class="col-md-3">
+                    <h5>Les liens</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-primary" href="#">Acceuil</a></li>
+                        <li><a class="text-primary" href="">Favoris</a></li>
+                        <li><a class="text-primary" href="">Recettes</a></li>
+                        <li><a class="text-primary" href="">Liste de course</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Contactactez-nous</h5>
+                    <ul class="list-unstyled">
+                        <li>8 rue de cuisisnier</li>
+                        <li>Martigues</li>
+                        <li>contact@leplatenforme.io</li>
+                        <li>Tel : 04.34.80.43.69</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
