--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
           <li class="nav-item"><a href="pages/liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
-      </footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/recette-card.js"></script>
 </body>
 </html>
