--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -6,6 +6,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <title>HappyMeal</title>
 
 </head>
@@ -100,7 +101,16 @@
             </div>
           </div>
         </div>
-    </div>
+    </div><br>
+    <nav aria-label="...">
+        <ul class="pagination pagination-md justify-content-center">
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">1</span>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+        </ul>
+    </nav>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -110,7 +120,8 @@
           <li class="nav-item"><a href="liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
-      </footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../js/recette-card.js"></script>
 </body>
 </html>
