--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -29,7 +29,7 @@
           </div>
         </div>
     </header>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary" style="background-image: url('../images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="col-md-6 p-lg-5 mx-auto my-5">
             <h1 class="display-3 fw-bold">Chez HappyMeal, nos recettes sont saines et variées</h1>
             <h3 class="fw-normal text-muted mb-3">Il n'est jamais trop tard pour une alimentation équilibrée !</h3>
@@ -43,7 +43,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/poulet-roti.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/poulet-roti.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
                 <div class="card-body">
                   <p class="card-text">Recette de Poulet rôti aux herbes</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -55,26 +55,9 @@
                 </div>
               </div>
             </div>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      ...
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
             <div class="col">  
                 <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/ratatouille.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/ratatouille.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
                 <div class="card-body">
                 <p class="card-text">Ratatouille provençale</p>
                 <div class="d-flex justify-content-between align-items-center">
@@ -88,7 +71,7 @@
             </div>
             <div class="col">  
                 <div class="card shadow-sm">
-                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="images/risotto.webp" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
+                <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="../images/risotto.webp" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text>
                 <div class="card-body">
                 <p class="card-text">Risotto aux champignons</p>
                 <div class="d-flex justify-content-between align-items-center">
