--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
           </div>
         </div>
     </header>
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <div class="col-md-6 p-lg-5 mx-auto my-5">
-            <h1 class="display-3 fw-bold">Bienvenue chez HappyMeal</h1>
-            <h3 class="fw-normal text-muted mb-3">"Venez comme vous êtes !"</h3>
+    <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <h1 class="display-4 fw-bold">Bienvenue chez HappyMeal</h1>
+                    <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3>
+                </div>
+            </div>
         </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
 
     <div class="album py-5 bg-body-tertiary">
