--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
             </div>
         </div>
     </div>
+    <!-- Modal pour afficher les détails de la recette -->
+    <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="recipeModalLabel">Détails de la recette</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img src="" class="img-fluid" id="recipeModalImage" alt="Image de la recette">
+                <h2 id="recipeModalName"></h2>
+                <p id="recipeModalDuration"></p>
+                <h3>Ingrédients</h3>
+                <ul id="recipeModalIngredients"></ul>
+                <h3>Étapes</h3>
+                <ol id="recipeModalSteps"></ol>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+        </div>
+    </div>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
