--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -13,10 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script defer src="js/scriptindex.js"></script>
+    <script defer src="js/script_login.js"></script>
     <title>Page d'Accueil</title>
 </head>
-<body class= "" style="background-image: url('https://media.istockphoto.com/id/582296960/fr/vectoriel/restaurant-dart-au-trait-mince-et-ic%C3%B4nes-de-lindustrie-alimentaire-motif-sans-couture.jpg?s=612x612&w=0&k=20&c=Udwj4MXDvKfjYpGxvbMorOx07UlDgAK6_yikyioe2oA=');">
+<body class="bg-success p-2" style="background-image: url('https://media.istockphoto.com/id/582296960/fr/vectoriel/restaurant-dart-au-trait-mince-et-ic%C3%B4nes-de-lindustrie-alimentaire-motif-sans-couture.jpg?s=612x612&w=0&k=20&c=Udwj4MXDvKfjYpGxvbMorOx07UlDgAK6_yikyioe2oA=');">
     <div class=" bg-image py-1" style="background-image: url('https://media.istockphoto.com/id/582296960/fr/vectoriel/restaurant-dart-au-trait-mince-et-ic%C3%B4nes-de-lindustrie-alimentaire-motif-sans-couture.jpg?s=612x612&w=0&k=20&c=Udwj4MXDvKfjYpGxvbMorOx07UlDgAK6_yikyioe2oA=');"></div>
     
     <nav class="navbar navbar-expand-sm bg-body-tertiary rounded" style="--bs-bg-opacity: .8;">
@@ -40,21 +40,16 @@
                         <a class="nav-link" href="#">Liste de course</a>
                     </li>
                 </ul>
-                <form class="d-flex " style="width: auto; " role="search">
-                    <div class="me-5">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" id="searchInput" autocomplete="on">
-                    </div>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
         </div>
     </nav>
-    <div class=" offset-md-8 bg-body-tertiary " style="width: 70%;--bs-bg-opacity: .8; ">
-        <ul id="suggestions"></ul>
-    </div>    
     <h1 class="text-center mt-5" style="font-family: 'Bungee Spice', cursive; font-size: 50px;">Le plate en forme</h1>
     <h3 class="text-center mb-5" style="font-family: 'Bungee Spice', cursive;">Des recettes et des actus culinaires</h3>
-    <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary rounded-pill " style="opacity: 0.7; width: 70%; height: 50%;">
+    <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary" style="opacity: 0.6; width: 70%; height: 50%;">
     <footer class="text-black py-4 mt-4 bg-body-tertiary rounded" style="--bs-bg-opacity: .8;">
         <div class="container">
             <div class="row text-center align-items-center">
