--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             object-fit: cover;
             height: 225px;
         }
+        .position-absolute {
+            position: absolute !important;
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
@@ -29,10 +33,13 @@
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-              <input type="search" class="form-control" placeholder="Rechercher..." aria-label="Search">
-            </form>
+                <input type="search" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Search">
+                <div id="search-results" class="position-absolute w-100 bg-white mt-1">
+                  <ul id="search-results-list" class="list-group"></ul>
+                </div>
+              </form>
           </div>
-        </div>
+        </div>        
     </header>
     <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <div class="container">
@@ -87,5 +94,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/random-recipe.js"></script>
+    <script src="js/barre-recherche.js"></script>
 </body>
 </html>
