J'ai commencer creir une fonction pour affichage de details dans une div

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </nav>
     <div class=" offset-md-8 bg-body-tertiary " style="width: 70%;--bs-bg-opacity: .8; ">
         <ul id="suggestions"></ul>
-    </div>    
+    </div>   
+    <div id="recetteDetailsContainer"></div> 
     <h1 class="text-center mt-5" style="font-family: 'Bungee Spice', cursive; font-size: 50px;">Le plate en forme</h1>
     <h3 class="text-center mb-5" style="font-family: 'Bungee Spice', cursive;">Des recettes et des actus culinaires</h3>
     <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary rounded-pill " style="opacity: 0.7; width: 70%; height: 50%;">
