Avancée page favori

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 <ul id="recipeModalSteps"></ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-warning add-to-favorites-btn">Ajouter aux favoris</button>
             </div>
         </div>
         </div>
