--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Favoris</title>
 </head>
 <body>
@@ -27,6 +31,16 @@
           </div>
         </div>        
     </header>
+    <div class="position-relative overflow-hidden p-3 p-md-4 m-md-2 text-center bg-body-tertiary" style="background-image: url('images/bg-index.jfif'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-8 mx-auto">
+                  <h1 class="display-4 fw-bold"> Plats favoris</h1>
+                  <!-- <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3> -->
+              </div>
+          </div>
+      </div>
+  </div>
     <main>
 
     </main>
