modification des noms de fichiers

--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -59,6 +59,7 @@
             </div>
         </div>
     </div>
+    
     <!-- Modal pour afficher les détails de la recette -->
     <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
@@ -78,11 +79,12 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-success add-to-favorites-btn">Ajouter les ingrédients à ma liste</button>
-            </div>            
+                <button type="button" class="btn btn-primary add-to-shopping-list-btn">Ajouter tous les ingrédients à ma liste</button>
+            </div>
         </div>
         </div>
     </div>
+
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -94,7 +96,7 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/random-recipe.js"></script>
+    <script src="../js/favori.js"></script>
     <script src="../js/barre-recherche.js"></script>
 </body>
 </html>
