--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="js/random-recipe.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/barre-recherche.js"></script>
 </body>
 </html>
