debut page liste

--- a/pages/liste.html
+++ b/pages/liste.html
@@ -52,6 +52,8 @@
         </div>
     </div>
 
+    <ul id="ingredients-list"></ul>
+
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Accueil</a></li>
@@ -62,7 +64,6 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/random-recipe.js"></script>
     <script src="../js/liste.js"></script>
     <script src="../js/barre-recherche.js"></script>
 </body>
