--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
             <ul id="suggestions"></ul>
         </div>   
         <h1 class="text-center mt-5" style="font-family: 'Bungee Spice', cursive; font-size: 50px;">Le plate en forme</h1>
-        <div id="recetteDetailsContainer"></div> 
-        <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary rounded-pill " style="opacity: 0.7; width: 50%; height: 210px;">
+        <div class="d-flex justify-content-center">
+            <div id="recettedetailée" class="text-center bg-body-tertiary " style="  width: 60%; --bs-bg-opacity: .8; "></div> 
+        </div>
+            <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary rounded-pill " style="opacity: 0.7; width: 50%; height: 210px;">
         <h3 class="text-center mb-5" style="font-family: 'Bungee Spice', cursive;">Les recettes et les actus culinaires</h3>
  
 <div class="d-flex justify-content-center row align-items-stretch m-1 ">
@@ -64,7 +66,7 @@
             <div class="card-body">
                 <h5 class="card-title">Poulet rôti aux herbes</h5>
                 <p id="carte1" class="card-text"></p>
-                <a href="#" class="btn btn-primary mt-5 ">Go somewhere</a>
+                <a id="boutton1" href="#" class="btn btn-primary mt-5 ">affiche la recette</a>
             </div>
         </div>
     </div>
@@ -74,7 +76,7 @@
             <div class="card-body">
                 <h5 class="card-title">Salade de quinoa aux légumes grillés</h5>
                 <p id="carte2" class="card-text"></p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a id="boutton2" href="#" class="btn btn-primary">Affiche la recette</a>
             </div>
         </div>
     </div>
@@ -84,7 +86,7 @@
             <div class="card-body">
                 <h5 class="card-title">Pâtes Carbonara</h5>
                 <p id="carte3" class="card-text"></p>
-                <a href="#" class="btn btn-primary ">Go somewhere</a>
+                <a id="boutton3" href="#" class="btn btn-primary ">affiche la recette</a>
             </div>
         </div>
     </div>
