changement slogan page recette

--- a/pages/recettes.html
+++ b/pages/recettes.html
@@ -45,8 +45,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="display-4 fw-bold">Bienvenue chez HappyMeal</h1>
-                    <h3 class="fw-normal text-muted mb-4">"Venez comme vous êtes !"</h3>
+                    <h1 class="display-4 fw-bold">Nous sommes fiers de vous présenter toutes nos recettes</h1>
+                    <h3 class="fw-normal text-muted mb-4">Toutes nos recettes sont saines et variées !</h3>
                 </div>
             </div>
         </div>
