La page d'index terminée, enrichi en l'affichage de plats avec photos

--- a/index.html
+++ b/index.html
@@ -59,41 +59,38 @@
             <img src="https://media.gqmagazine.fr/photos/6244448b30db98f974d07af3/16:9/w_2560%2Cc_limit/cuisine.jpg" alt="photo cuisinier" class="d-block mx-auto bg-body-tertiary rounded-pill " style="opacity: 0.7; width: 50%; height: 210px;">
         <h3 class="text-center mb-5" style="font-family: 'Bungee Spice', cursive;">Les recettes et les actus culinaires</h3>
  
-<div class="d-flex justify-content-center row align-items-stretch m-1 ">
-    <div class="col-md-4 mb-3">
-        <div class="card h-100">
-            <img src="images/poulet-roti.jpg" class="card-img-top" alt="..." style="height: 250px;">
-            <div class="card-body">
-                <h5 class="card-title">Poulet rôti aux herbes</h5>
-                <p id="carte1" class="card-text"></p>
-                <a id="boutton1" href="#" class="btn btn-primary mt-5 ">affiche la recette</a>
+        <div class="d-flex justify-content-center row align-items-stretch m-1 ">
+            <div class="col-md-4 mb-3">
+                <div class="card h-100">
+                    <img src="images/poulet-roti.jpg" class="card-img-top" alt="..." style="height: 250px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Poulet rôti aux herbes</h5>
+                        <p id="carte1" class="card-text"></p>
+                        <a id="boutton1" href="#" class="btn btn-primary mt-5 ">affiche la recette</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card h-100">
+                    <img src="images/salade-quinoa.jpg" class="card-img-top" alt="..." style="height: 250px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Salade de quinoa aux légumes grillés</h5>
+                        <p id="carte2" class="card-text"></p>
+                        <a id="boutton2" href="#" class="btn btn-primary">affiche la recette</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card h-100">
+                    <img src="images/pate-carbonara.jpg" class="card-img-top" alt="..." style="height: 250px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Pâtes Carbonara</h5>
+                        <p id="carte3" class="card-text"></p>
+                        <a id="boutton3" href="#" class="btn btn-primary ">affiche la recette</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-4 mb-3">
-        <div class="card h-100">
-            <img src="images/tarte-pomme.jpg" class="card-img-top" alt="..." style="height: 250px;">
-            <div class="card-body">
-                <h5 class="card-title">Salade de quinoa aux légumes grillés</h5>
-                <p id="carte2" class="card-text"></p>
-                <a id="boutton2" href="#" class="btn btn-primary">Affiche la recette</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4 mb-3">
-        <div class="card h-100">
-            <img src="images/pate-carbonara.jpg" class="card-img-top" alt="..." style="height: 250px;">
-            <div class="card-body">
-                <h5 class="card-title">Pâtes Carbonara</h5>
-                <p id="carte3" class="card-text"></p>
-                <a id="boutton3" href="#" class="btn btn-primary ">affiche la recette</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-        
-        
         <footer class="text-black py-4 mt-4 bg-body-tertiary rounded" style="--bs-bg-opacity: .8;">
             <div class="container">
                 <div class="row text-center align-items-center">
