Debut de la fonction liste

--- a/pages/liste.html
+++ b/pages/liste.html
@@ -52,7 +52,11 @@
         </div>
     </div>
 
-    <ul id="ingredients-list"></ul>
+    <div class="container" id="shopping-list-container">
+        <!-- C'est ici que la liste de courses sera affichée dynamiquement -->
+    </div>
+
+    <button class="btn btn-warning" onclick="clearShoppingList()">Effacer la liste</button>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
