--- a/pages/liste.html
+++ b/pages/liste.html
@@ -52,11 +52,14 @@
         </div>
     </div>
 
-    <div class="container" id="shopping-list-container">
-        <!-- C'est ici que la liste de courses sera affichée dynamiquement -->
+    <h1>Liste de Courses</h1>
+    <div class="container">
+        <ul id="shopping-list-container"></ul>
+        <br>
+        <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
     </div>
 
-    <button class="btn btn-warning" onclick="clearShoppingList()">Effacer la liste</button>
+    <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
