Style pour la liste page liste

--- a/pages/liste.html
+++ b/pages/liste.html
@@ -52,14 +52,17 @@
         </div>
     </div>
 
-    <h1>Liste de Courses</h1>
-    <div class="container">
-        <ul id="shopping-list-container"></ul>
-        <br>
-        <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
-    </div>
-
-    <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
+    <div class="card text-center">
+        <div class="card-header">
+          Ma Liste d'ingrédients
+        </div>
+        <div class="card-body">
+            <ul class="list-group list-group-flush "id="shopping-list-container"></ul>
+        </div>
+        <div class="card-footer text-muted">
+            <button class="btn btn-danger" onclick="clearShoppingList()">Effacer la liste</button>
+        </div>
+      </div>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
