Amelioration site, creation page planning

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <li><a href="pages/recettes.html" class="nav-link px-2 link-body-emphasis">Recettes</a></li>
               <li><a href="pages/favoris.html" class="nav-link px-2 link-body-emphasis">Mes Favoris</a></li>
               <li><a href="pages/liste.html" class="nav-link px-2 link-body-emphasis">Ma liste</a></li>
+              <li><a href="pages/planning.html" class="nav-link px-2 link-body-emphasis">Planning</a></li>
             </ul>
     
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -90,6 +91,7 @@
           <li class="nav-item"><a href="pages/recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
           <li class="nav-item"><a href="pages/favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
           <li class="nav-item"><a href="pages/liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="pages/planning.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
