--- a/pages/planning.html
+++ b/pages/planning.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
     <title>HappyMeal</title>
     <style>
         .card-img-top {
@@ -46,46 +47,64 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mx-auto">
-                    <h1 class="display-4 fw-bold">Retrouvez ici vos recettes favorites !</h1>
-                    <h3 class="fw-normal text-muted mb-4">"Mmhh....HappyMeal !"</h3>
+                    <h1 class="display-4 fw-bold">Votre Planning</h1>
+                    <h3 class="fw-normal text-muted mb-4">Planifier vos repas avec vos recettes favorites !</h3>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="album py-5 bg-body-tertiary">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="recipe-container">
-                <!-- Les recettes seront affichées ici sous forme de cards par 3 -->
-            </div>
-        </div>
-    </div>
-    
-    <!-- Modal pour afficher les détails de la recette -->
-    <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+    <h1>Planification de repas</h1>
+  <table>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Lundi</th>
+        <th>Mardi</th>
+        <th>Mercredi</th>
+        <th>Jeudi</th>
+        <th>Vendredi</th>
+        <th>Samedi</th>
+        <th>Dimanche</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Déjeuner</td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+      </tr>
+      <tr>
+        <td class="empty-cell">Dîner</td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+        <td class="empty-cell"><button type="button" class="btn btn-primary add-recipe-btn">Ajouter une recette</button></td>
+      </tr>
+    </tbody>
+  </table><br>
+  <button class="btn btn-secondary text-center" onclick="generatePDF()">Télécharger ma liste</button>
+  <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="recipeModalLabel">Détails de la recette</h5>
+                <h5 class="modal-title" id="recipeModalLabel">Sélectionner une recette</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <img src="" class="img-fluid" id="recipeModalImage" alt="Image de la recette">
-                <h2 id="recipeModalName"></h2>
-                <p id="recipeModalDuration"></p>
-                <h3>Ingrédients</h3>
-                <ul id="recipeModalIngredients"></ul>
-                <h3>Étapes</h3>
-                <ul id="recipeModalSteps"></ul>
+                <!-- Contenu des recettes sera ajouté ici -->
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fermer</button>
-                <button type="button" class="btn btn-primary" id="addAllIngredientsBtn">Ajouter tous les ingrédients à ma liste</button>
-            </div>
-        </div>
         </div>
     </div>
-
+    </div>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -98,7 +117,6 @@
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/favori.js"></script>
-    <script src="../js/barre-recherche.js"></script>
+    <script src="../js/planning.js"></script>
 </body>
 </html>
