telechargement planning ope

--- a/pages/planning.html
+++ b/pages/planning.html
@@ -91,7 +91,7 @@
       </tr>
     </tbody>
   </table><br>
-  <button class="btn btn-secondary text-center" onclick="generatePDF()">Télécharger ma liste</button>
+  <button class="btn btn-secondary text-center" onclick="generatePDF()">Télécharger mon planning</button>
   <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
