erreur reparé, changement nom lien footer

--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -93,7 +93,7 @@
           <li class="nav-item"><a href="recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
           <li class="nav-item"><a href="favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
           <li class="nav-item"><a href="liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
-          <li class="nav-item"><a href="planning.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="planning.html" class="nav-link px-2 text-body-secondary">Planning</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
