--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <li class="nav-item"><a href="pages/recettes.html" class="nav-link px-2 text-body-secondary">Recettes</a></li>
           <li class="nav-item"><a href="pages/favoris.html" class="nav-link px-2 text-body-secondary">Mes Favoris</a></li>
           <li class="nav-item"><a href="pages/liste.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
-          <li class="nav-item"><a href="pages/planning.html" class="nav-link px-2 text-body-secondary">Ma liste</a></li>
+          <li class="nav-item"><a href="pages/planning.html" class="nav-link px-2 text-body-secondary">Planning</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2024 HappyMeal Company, Inc</p>
     </footer>
