tentative barre de recherche et localstorage planning

--- a/pages/planning.html
+++ b/pages/planning.html
@@ -39,7 +39,7 @@
                 <div id="search-results" class="position-absolute w-100 bg-white mt-1">
                   <ul id="search-results-list" class="list-group"></ul>
                 </div>
-              </form>
+            </form>
           </div>
         </div>        
     </header>
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-md-8 mx-auto">
                     <h1 class="display-4 fw-bold">Votre Planning</h1>
-                    <h3 class="fw-normal text-muted mb-4">Planifier vos repas avec vos recettes favorites !</h3>
+                    <h3 class="fw-normal text-muted mb-4">Planifiez vos repas avec vos recettes favorites !</h3>
                 </div>
             </div>
         </div>
@@ -118,5 +118,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../js/planning.js"></script>
+    <script src="../js/barre-recherche.js"></script>
 </body>
 </html>
