Enlevement barre page planning et liste , inutile

--- a/pages/liste.html
+++ b/pages/liste.html
@@ -36,12 +36,12 @@
               <li><a href="planning.html" class="nav-link px-2 link-body-emphasis">Planning</a></li>
             </ul>
     
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+            <!--<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" id="search-input" class="form-control" placeholder="Rechercher..." aria-label="Search">
                 <div id="search-results" class="position-absolute w-100 bg-white mt-1">
                   <ul id="search-results-list" class="list-group"></ul>
                 </div>
-              </form>
+            </form> -->
           </div>
         </div>        
     </header>
