--- a/pages/planning.html
+++ b/pages/planning.html
@@ -92,6 +92,7 @@
     </tbody>
   </table><br>
   <button class="btn btn-secondary text-center" onclick="generatePDF()">Télécharger mon planning</button>
+  <button class="btn btn-secondary text-center" >Sauvegarder mon plannig</button>
   <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
